java/zebra-puzzle